<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Router Simulator</string>
    <string name="action_settings">Settings</string>
    <string name="IPAddress">&quot;IP Address:  &quot;</string>
    <string name="ShowIPAddress">&quot;Show IP Address&quot;</string>
    <string name="SendLL2PFrame">&quot;Send LL2P Frame&quot;</string>
    <string name="Destination_LL2P_MAC">&quot;Destiny 2 MAC:  &quot;</string>
    <string name="Source_LL2P_MAC">&quot;Source 2 MAC:  &quot;</string>
    <string name="Type_Field">&quot;Type:  &quot;</string>
    <string name="CRC16CCITT">&quot;CRC16CCITT:  &quot;</string>
    <string name="Payload">&quot;Payload:  &quot;</string>
    <string name="turnOnWifi">&quot;You need to turn on WiFi before this app will work&quot;</string>
    <string name="FFFFFF">&quot;FFFFFF&quot;</string>
    <string name="FFFF">&quot;FFFF&quot;</string>
    <string name="LL2P_MAC">&quot;LL2P MAC:  &quot;</string>
    <string name="Add">&quot;Add&quot;</string>
    <string name="IP_Example">&quot;10.0.0.0&quot;</string>
    <string name="Echo_Payload">&quot;Echo Payload:  &quot;</string>
    <string name="Echo_Payload_Hint">&quot;Echo&quot;</string>
    <string name="Routing_Table">&quot;Routing Table&quot;</string>
    <string name="Forwarding_Table">&quot;Forwarding Table&quot;</string>
    <string name="FF">&quot;FF&quot;</string>
    <string name="Source_LL3P_IP">&quot;Source 3 IP:  &quot;</string>
    <string name="Destination_LL3P_IP">&quot;Destiny 3 IP:  &quot;</string>
    <string name="Identifier">&quot;ID:  &quot;</string>
    <string name="Time_To_Live">&quot;TTL:  &quot;</string>
    <string name="Checksum16Bit1sComplement">&quot;16 Bit 1s Comp Checksum:  &quot;</string>
    <string name="name_prompt">&quot;Send to:  &quot;</string>
    <string name="test">&quot;test&quot;</string>
    <string name="Lab_Messenger">&quot;Lab Messenger&quot;</string>
    <string name="Send">&quot;Send&quot;</string>
    <string name="Exit">&quot;Exit&quot;</string>
    <string name="Enter_Message">&quot;enter message for friend&quot;</string>
    <string name="Begin_IM">&quot;Instant Messenger!!!&quot;</string>

</resources>
